[package]
name = "screenshots_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
anyhow = "1.0"
